--- a/31-intro-to-dom/instructor/example/index.html
+++ b/31-intro-to-dom/instructor/example/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Manipulating the DOM</title>
+
+    <script src="main.js" defer></script>
   </head>
   <body>
     <h1 id="page-title">Manipulating the DOM</h1>
